[package]
name = "pgpt-driver"
version.workspace = true
edition.workspace = true

[dependencies]
candle-core = { version = "0.8.3", features = ["metal"] }
candle-nn = { version = "0.8.3", features = ["metal"] }
candle-transformers = { version = "0.8.3", features = ["metal"] }
clap.workspace = true
eyre.workspace = true
hf-hub = "0.4.1"
serde.workspace = true
serde_json.workspace = true
tokenizers = "0.21.0"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.19"
